--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 <body>
 
     <div class="welcome">
-        <h1>Docker Static Site</h1>
-        <p>Welcome to a fresh project.</p>
+        <h1>This is an example Docker Project</h1>
+        <p>Welcome to a fresh project. This project will be used for running a static website, and testing the automated build feature.</p>
     </div>
 </body>
 
