--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <div class="welcome">
         <h1>This is an example Docker Project</h1>
-        <p>Welcome to a fresh project. This project will be used for running a static website, and testing the automated build feature.</p>
+        <p>This project will be used for running a static website, and testing the automated build feature.</p>
     </div>
 </body>
 
