--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <div class="welcome">
-        <h1>This is an example Docker Project</h1>
+        <h1>Docker Static</h1>
         <p>This project will be used for running a static website, and testing the automated build feature.</p>
     </div>
 </body>
